# RS1_GroupProject_S2024

./: README.md
cylinder_package/: CMakeLists.txt  package.xml
cylinder_package/WORLD/: cylinder_world
cylinder_package/launch/: cylinder_detect.launch.py
cylinder_package/rviz/: cylinder_nav.rviz
cylinder_package/src/: cylinder_rotate.cpp  initial_pose.cpp
cylinder_package/world/: cylinder_world.world
e-stop/: Angie.cpp  CMakeLists.txt  package.xml
e-stop/src/: Angie.cpp
rs1_group_project/: CMakeLists.txt  package.xml
rs1_group_project/launch/: rs1_project_world.launch.py
rs1_group_project/models/unit_cylinder30cmCylinder/: model.config  model.sdf
rs1_group_project/src/: Jake.cpp  detect_copy.cpp  gui_application.cpp  initial_pose.cpp  navigation.cpp  objectDetection.cpp  userInput.cpp
rs1_group_project/worlds/: rs1_project_world.world
rs1_project/: CMakeLists.txt  package.xml
rs1_project/launch/: rs1_project_world.launch.py
rs1_project/src/: Jake.cpp
